# Manager-MS

./: .gitignore  Cargo.toml  README.md  output.txt  spin.toml
auth-service-component/: Cargo.toml
auth-service-component/src/: bcrypt.rs  controller.rs  lib.rs  model.rs  persistence.rs  routers.rs
image-service-component/: Cargo.toml
image-service-component/src/: controller.rs  lib.rs  model.rs  persistence.rs  routers.rs
shared-crates/auth-middleware/: Cargo.toml
shared-crates/auth-middleware/src/: jwt.rs  lib.rs
user-service-component/: Cargo.toml
user-service-component/src/: controller.rs  lib.rs  model.rs  persistence.rs  routers.rs
