[package]
name = "image_service_component"
authors = ["H.D.J.Lakshan <lakshanjkl49@gmail.com>"]
description = "image service api"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "image_service_component"

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
auth_middleware = {path = "../shared-crates/auth-middleware"}

